[BlackBerry] Missing readyState 2 when a XMLHttpRequest calls xmlhttp.open("HEAD","notExist.html",true). https://bugs.webkit.org/show_bug.cgi?id=83866

Source/WebCore:

Patch by Jason Liu <jason.liu@torchmobile.com.cn> on 2012-04-16
Reviewed by George Staikos.

We receive 404 for a XMLHttpRequest which calls open("HEAD", "notExist.html", true).
There are no data received because its method is HEAD.
This case shouldn't be treated as a failure.

Test: http/tests/xmlhttprequest/xmlhttprequest-check-head-readystate-for-404.html

* platform/network/blackberry/NetworkJob.cpp:
(WebCore::NetworkJob::handleNotifyClose):

LayoutTests:

Patch by Jason Liu <jason.liu@torchmobile.com.cn> on 2012-04-16
Reviewed by George Staikos.

* http/tests/xmlhttprequest/xmlhttprequest-check-head-readystate-for-404-expected.txt: Added.
* http/tests/xmlhttprequest/xmlhttprequest-check-head-readystate-for-404.html: Added.

Canonical link: https://commits.webkit.org/101511@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114235 268f45cc-cd09-0410-ab3c-d52691b4dbfc